syntax = "proto3";

package employee_service.requests.action.delete_action;

option go_package = "github.com/nicodanke/gesty-api/shared/proto/employee-service/requests/action";

message DeleteActionRequest {
    int64 id = 1;
}